--- a/index.html
+++ b/index.html
@@ -1,11 +1,235 @@
 <!doctype html>
-<html>
+<html lang="id">
 <head>
-  <meta charset="utf-8">
-  <title>Gunung Cupu</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nafas Gunung Cupu – GN-ELM</title>
+  <meta name="description" content="Nafas Gunung Cupu – Sekolah Alam & Konservasi Hidup." />
+  <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Gunung Cupu – Website Aktif</h1>
-  <p>Kalau tulisan ini muncul, GitHub Pages berhasil.</p>
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="#top">
+        <img src="assets/logo.svg" alt="Logo Nafas Gunung Cupu" />
+        <div>
+          <strong>Nafas Gunung Cupu</strong><br/>
+          <span class="small">GN-ELM · Sekolah Alam & Konservasi</span>
+        </div>
+      </a>
+      <nav class="nav-links" aria-label="Navigasi">
+        <a href="#tentang">Tentang</a>
+        <a href="#z1">Zona Z1</a>
+        <a href="#sekolah">Sekolah Alam</a>
+        <a href="#satwa">Burung & Primata</a>
+        <a href="#etika">Etika</a>
+        <a href="#unduhan">Unduhan</a>
+        <a href="#kontak">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="top" class="hero">
+    <div class="container">
+      <div class="hero-card">
+        <div class="hero-top">
+          <div class="hero-media" role="img" aria-label="Kabut pagi Gunung Cupu"></div>
+          <div class="hero-content">
+            <div class="kicker">🫁 Nafas Gunung Cupu · GN-ELM</div>
+            <h1>Sekolah di Alam,<br/>Belajar Menjaga Kehidupan</h1>
+            <p class="tagline"><b>Menanam</b> sepanjang musim · <b>Merawat</b> sepanjang waktu · <b>Menjaga</b> sepanjang masa</p>
+            <p class="lead">
+              Gunung Cupu adalah hasil kerja ekologis berkelanjutan lebih dari 20 tahun: menanam, merawat, dan menjaga hingga lahir hutan yang hidup.
+              Halaman ini menjadi pintu informasi resmi untuk <b>Zona Konservasi Inti (Z1)</b>, <b>Sekolah Alam</b>, dan <b>Zona Tenang</b>—siap ditautkan ke QR papan.
+            </p>
+            <div class="cta">
+              <a class="btn primary" href="#z1">🌿 Jelajahi Zona Konservasi</a>
+              <a class="btn" href="#unduhan">📘 Unduh LKS & Dokumen</a>
+              <a class="btn" href="#kontak">🤝 Kemitraan</a>
+            </div>
+            <div class="hr"></div>
+            <div class="qr-box">
+              <div class="qr" aria-label="Placeholder QR">QR</div>
+              <div class="small">
+                <b>QR untuk papan:</b> buat QR dari URL final website.<br/>
+                Rekomendasi: <span class="kbd">nafascupu.id/z1</span> dan tulis URL cadangan di bawah QR.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section id="tentang" class="section">
+        <div class="section-title">
+          <h2>Tentang Gunung Cupu</h2>
+          <div class="badges">
+            <span class="badge">20+ tahun pemulihan</span>
+            <span class="badge">Konservasi + Pendidikan</span>
+            <span class="badge">Zona Tenang</span>
+          </div>
+        </div>
+        <div class="grid">
+          <div class="card cols-8">
+            <h2>Kisah Pemulihan</h2>
+            <p>
+              Vegetasi di kawasan inti adalah hasil penanaman dan pemeliharaan berkelanjutan selama lebih dari 20 tahun.
+              Kini tutupan hutan lembab berlapis mulai menunjukkan regenerasi alami aktif—indikator ekosistem yang bergerak menuju kondisi lebih stabil dan mandiri.
+            </p>
+          </div>
+          <div class="card cols-4">
+            <h2>Fokus Utama</h2>
+            <ul class="list">
+              <li>Menjaga tata air</li>
+              <li>Menahan erosi & lereng</li>
+              <li>Habitat burung & primata</li>
+              <li>Sekolah alam berbasis observasi</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="z1" class="section">
+        <div class="section-title">
+          <h2>Zona Konservasi Inti (Z1)</h2>
+          <div class="badges"><span class="badge">Z1A</span><span class="badge">Z1B</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-6">
+            <h2>Z1A – Inti Puncak</h2>
+            <p>Perlindungan penuh untuk puncak sebagai bank genetik, penjaga mikroklimat, dan inti tata air.</p>
+            <ul class="list">
+              <li>Tanpa produksi & tanpa intervensi intensif</li>
+              <li>Pengayaan terbatas hanya bila perlu</li>
+              <li>Zona tenang untuk satwa</li>
+            </ul>
+          </div>
+          <div class="card cols-6">
+            <h2>Z1B – Sabuk Konservasi Lereng</h2>
+            <p>Sabuk pelindung inti puncak: penahan erosi, penyaring air, koridor ekologis.</p>
+            <ul class="list">
+              <li>Monitoring rutin & jalur terbatas</li>
+              <li>Papan batas P5–P10</li>
+              <li>Penguatan titik rawan erosi</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="sekolah" class="section">
+        <div class="section-title">
+          <h2>Sekolah Alam GN-ELM</h2>
+          <div class="badges"><span class="badge">SD</span><span class="badge">SMP</span><span class="badge">SMA</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-4">
+            <h2>SD</h2>
+            <p>Observasi dasar: mendengar hutan, menggambar, bercerita. Fokus etika: tenang, tidak merusak.</p>
+          </div>
+          <div class="card cols-4">
+            <h2>SMP</h2>
+            <p>Analisis sederhana: ciri hutan sehat, hubungan hutan–air–satwa, pencatatan temuan.</p>
+          </div>
+          <div class="card cols-4">
+            <h2>SMA</h2>
+            <p>Lebih analitis: burung & primata sebagai indikator biologis, dampak gangguan, refleksi konservasi.</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="satwa" class="section">
+        <div class="section-title">
+          <h2>Burung & Primata sebagai Indikator Ekosistem</h2>
+          <div class="badges"><span class="badge">Observasi Pasif</span><span class="badge">Non-intervensi</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-6">
+            <h2>Burung</h2>
+            <p>Keberagaman & kemunculan burung menandakan struktur hutan berlapis dan ketersediaan pakan alami.</p>
+          </div>
+          <div class="card cols-6">
+            <h2>Primata (monyet & kera)</h2>
+            <p>Primata membutuhkan kontinuitas kanopi. Perilaku alami tanpa terbiasa diberi pakan menandakan gangguan rendah.</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="etika" class="section">
+        <div class="section-title">
+          <h2>Etika Kunjungan – Zona Tenang</h2>
+          <div class="badges"><span class="badge">Jaga Suara</span><span class="badge">Jaga Langkah</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-6">
+            <h2>Dianjurkan</h2>
+            <ul class="list">
+              <li>Berjalan perlahan & tetap di jalur</li>
+              <li>Observasi dari jarak aman</li>
+              <li>Bawa pulang semua sampah</li>
+              <li>Gunakan suara pelan</li>
+            </ul>
+          </div>
+          <div class="card cols-6">
+            <h2>Dilarang</h2>
+            <ul class="list">
+              <li>Berisik / memutar musik</li>
+              <li>Memberi makan satwa</li>
+              <li>Mengejar satwa</li>
+              <li>Merusak vegetasi</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="unduhan" class="section">
+        <div class="section-title">
+          <h2>Unduhan</h2>
+          <div class="badges"><span class="badge">PDF</span><span class="badge">KMZ</span><span class="badge">LKS</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-12">
+            <p class="small">Taruh file di folder <span class="kbd">downloads/</span>, lalu ubah link sesuai nama file Anda.</p>
+            <div class="hr"></div>
+            <ul class="list">
+              <li><a href="downloads/Masterplan_Z1.pdf">Masterplan Z1 (PDF)</a></li>
+              <li><a href="downloads/LKS_Z1_SD.pdf">LKS SD (PDF)</a></li>
+              <li><a href="downloads/LKS_Z1_SMP.pdf">LKS SMP (PDF)</a></li>
+              <li><a href="downloads/LKS_Z1_SMA.pdf">LKS SMA (PDF)</a></li>
+              <li><a href="downloads/Z1_FINAL.kmz">KMZ Z1 Final</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="kontak" class="section">
+        <div class="section-title">
+          <h2>Kontak & Kemitraan</h2>
+          <div class="badges"><span class="badge">Sekolah</span><span class="badge">Kampus</span><span class="badge">Donor</span></div>
+        </div>
+        <div class="grid">
+          <div class="card cols-6">
+            <h2>Jadwalkan Kunjungan</h2>
+            <p>Kunjungan dilakukan terbatas & terkontrol, mengikuti etika Zona Tenang.</p>
+            <ul class="list">
+              <li>Email: <span class="kbd">isi_email@contoh.com</span></li>
+              <li>WhatsApp: <span class="kbd">+62 …</span></li>
+              <li>Lokasi: Gunung Cupu, Jonggol</li>
+            </ul>
+          </div>
+          <div class="card cols-6">
+            <h2>Untuk Mitra</h2>
+            <p>Dokumen masterplan, papan, dan LKS tersedia di Unduhan. Kami membuka kemitraan konservasi, riset, dan pendidikan.</p>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="hr"></div>
+        <div class="small">© 2026 Nafas Gunung Cupu · GN-ELM — Sekolah Alam & Konservasi Hidup.</div>
+      </footer>
+    </div>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
