--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
         </p>
 
         <p class="muted">
-          Gunung Cupu adalah kerja ekologi berkelanjutan lebih dari 20 tahun: dari lahan rusak menjadi lanskap hidup
-          yang menjaga mata air, keanekaragaman hayati, dan pembelajaran berbasis alam.
+          Kawasan Gunung Cupu yang berlokasi di Desa Sukajaya Kecamatan Jonggol, Kabupaten Bogor bukan merupakan hutan alam, melainkan hasil konservasi berbasis penanaman jangka panjang yang membentuk ekosistem hutan rakyat dengan dominasi jati, mahoni, bambu, gaharu, aren, kemiri, serta tanaman buah dan tanaman obat. Proses ini berkontribusi terhadap pemulihan fungsi hidrologi, perlindungan tanah, peningkatan keanekaragaman hayati, dan keberlanjutan sumber air bagi wilayah sekitarnya.
+Dalam kerangka pengembangan kawasan, Gunung Cupu diarahkan sebagai Conservation Farm and Natural Adventure, yaitu kawasan yang memadukan konservasi hutan dan air, agroforestri herbal (khususnya kebun mahoni dan tanaman obat), eduwisata lingkungan, serta wisata petualangan alam berskala kecil dan terkendali. Seluruh aktivitas wisata dirancang untuk mendukung fungsi konservasi, bukan sebaliknya, dengan menerapkan prinsip daya dukung kawasan, zonasi jelas, serta pengelolaan berbasis etika lingkungan.
+Pengembangan kawasan dilaksanakan melalui pendekatan Agro–Eco–Edu Tourism, dengan program unggulan meliputi konservasi hutan dan air, kebun herbal, edukasi pertanian dan lingkungan, wisata edukatif dan petualangan alam, serta penguatan UMKM desa. Masyarakat Desa Sukajaya berperan sebagai subjek utama pengelolaan kawasan, baik sebagai petani konservasi, pemandu wisata, pengelola produk lokal, maupun mitra edukasi, sehingga manfaat ekonomi berjalan seiring dengan pelestarian alam dan nilai sosial budaya.
+Tahapan pengembangan kawasan dilakukan secara bertahap dan berkelanjutan, dimulai dari penguatan legalitas dan zonasi, konservasi awal dan infrastruktur ringan ramah lingkungan, pengembangan program eduwisata dan produk unggulan, hingga perluasan kemitraan dengan pemerintah daerah, institusi pendidikan, dan lembaga riset. Keberhasilan kawasan diukur melalui indikator lingkungan, sosial, ekonomi, wisata berkualitas, serta kepatuhan tata kelola, sebagaimana dirumuskan dalam dokumen perencanaan dan monitoring kawasan.
+Melalui konsep ini, Gunung Cupu diharapkan menjadi model pengembangan kawasan berbasis desa yang menyeimbangkan konservasi lingkungan, edukasi publik, dan penguatan ekonomi lokal, serta menjadi rujukan praktik pembangunan berkelanjutan di tingkat daerah dan nasional
+.
         </p>
 
         <div class="hero__actions">
