--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="theme-color" content="#1f3d2a" />
 
   <meta property="og:title" content="Nafas Gunung Cupu — GN-ELM" />
-  <meta property="og:description" content="Sekolah alam & konservasi: menanam sepanjang musim, merawat sepanjang waktu, menjaga sepanjang masa." />
+  <meta property="og:description" content="SSekolah Alam Gunung Cupu atau Gunung Cupu Environmental Learning Model (GC-ELM) adalah program edukasi lingkungan regeneratif berbasis masyarakat yang dikembangkan di kawasan Gunung Cupu Conservation Farm & Nature Adventure. Program ini menjadikan lanskap yang telah dipulihkan selama lebih dari 20 tahun sebagai ruang belajar hidup untuk memahami hubungan antara ekosistem, pangan, air, keanekaragaman hayati, dan keberlanjutan sosial.
+GC-ELM dirancang selaras dengan Tujuan Pembangunan Berkelanjutan (SDGs) dan kerangka Education for Sustainable Development (ESD). Model ini menekankan pembelajaran berbasis pengalaman langsung (experiential learning), pengetahuan lokal masyarakat, serta aksi regeneratif yang memberikan dampak nyata bagi kawasan.
+Program unggulan GC-ELM dilaksanakan dalam format lapangan selama enam hari dengan kapasitas 15–25 peserta dan sistem residensial di kawasan. Kurikulum mencakup pembacaan lanskap, tanaman obat herbal, sistem penyerbukan dan kupu-kupu, burung dan primata sebagai indikator ekosistem, aksi restorasi mikrohabitat, serta ekologi malam melalui observasi kunang-kunang.
+Dampak yang dihasilkan meliputi peningkatan pemahaman peserta terhadap ekosistem hidup, kontribusi langsung pada pemulihan habitat, penguatan peran masyarakat lokal sebagai fasilitator pengetahuan, serta dokumentasi biodiversitas sebagai dasar pembelajaran dan monitoring jangka panjang.
+." />
   <meta property="og:type" content="website" />
   <!-- Jika Anda punya gambar og (mis. og.jpg), taruh di repo lalu aktifkan:
   <meta property="og:image" content="og.jpg" />
