--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@ Melalui konsep ini, Gunung Cupu diharapkan menjadi model pengembangan kawasan be
           </div>
         </div>
       </div>
-
+assets/
+ └── img/
+     ├── air.jpg
+     ├── riparian.jpg
+     ├── vegetasi-bertingkat.jpg
+     ├── jambu.jpg
+     ├── hero.jpg
       <div class="hero__media" aria-hidden="true">
         <!-- Pakai hero.svg bila ada. Jika tidak, tetap tampil cantik karena ada gradient -->
         <img src="hero.svg" alt="" onerror="this.style.display='none'" />
