--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Nafas Gunung Cupu — GN-ELM. Sekolah alam & konservasi: menanam sepanjang musim, merawat sepanjang waktu, menjaga sepanjang masa." />
+  <meta name="description" content="Kawasan Gunung Cupu, berlokasi di Kampung Cigaruguy, Desa Sukajaya, Kecamatan Jonggol, Kabupaten Bogor, dikembangkan sebagai kawasan agrowisata, konservasi, dan edukasi terpadu berbasis masyarakat  yang mengintegrasikan perlindungan lingkungan hidup, pertanian berkelanjutan, serta pemberdayaan ekonomi masyarakat lokal. Pengembangan kawasan ini berlandaskan pada proses rehabilitasi dan restorasi lahan melalui inisiatif seorang Anak Petani (Nurdin) yang telah berlangsung sejak awal tahun 2000-an, dari kondisi lahan terdegradasi menjadi lanskap hijau dengan tutupan agroforestri yang berfungsi ekologis.
+Kawasan Gunung Cupu bukan merupakan hutan alam, melainkan hasil konservasi berbasis penanaman jangka panjang yang membentuk ekosistem hutan rakyat dengan dominasi jati, mahoni, bambu, gaharu, aren, kemiri, serta tanaman buah dan tanaman obat. Proses ini berkontribusi terhadap pemulihan fungsi hidrologi, perlindungan tanah, peningkatan keanekaragaman hayati, dan keberlanjutan sumber air bagi wilayah sekitarnya.
+Dalam kerangka pengembangan kawasan, Gunung Cupu diarahkan sebagai Conservation Farm and Natural Adventure, yaitu kawasan yang memadukan konservasi hutan dan air, agroforestri herbal, eduwisata lingkungan, serta wisata petualangan alam berskala kecil dan terkendali. Seluruh aktivitas dirancang untuk mendukung fungsi konservasi, bukan sebaliknya, dengan menerapkan prinsip daya dukung kawasan, zonasi jelas, serta pengelolaan berbasis etika lingkungan.
+Pengembangan kawasan dilaksanakan melalui pendekatan Agro–Eco–Edu Tourism, dengan program unggulan meliputi konservasi hutan dan air, kebun herbal, edukasi pertanian dan lingkungan, wisata edukatif dan petualangan alam, serta penguatan UMKM desa. Masyarakat Desa Sukajaya berperan sebagai subjek utama pengelolaan kawasan, baik sebagai petani konservasi, pemandu wisata, pengelola produk lokal, maupun mitra edukasi, sehingga manfaat ekonomi berjalan seiring dengan pelestarian alam dan nilai sosial budaya.
+" />
   <meta name="theme-color" content="#1f3d2a" />
 
   <meta property="og:title" content="Nafas Gunung Cupu — GN-ELM" />
