--- a/index.html
+++ b/index.html
@@ -1,5 +1,110 @@
 /index.html
 /tentang.html
+
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tentang — Nafas Gunung Cupu</title>
+  <meta name="description" content="Tentang kawasan Gunung Cupu: konservasi berbasis penanaman jangka panjang, agroforestri, dan eduwisata." />
+  <link rel="icon" href="assets/img/logo-icon.png" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="topbar">
+    <div class="container">
+      <div class="nav">
+        <a class="brand" href="index.html">
+          <img src="assets/img/logo-icon.png" alt="Logo" />
+          <div>
+            <div class="t1">Nafas Gunung Cupu</div>
+            <div class="t2">Conservation Farm & Natural Adventure</div>
+          </div>
+        </a>
+
+        <div class="menu">
+          <a href="index.html">Beranda</a>
+          <a href="tentang.html">Tentang</a>
+          <a href="galeri.html">Galeri</a>
+          <a href="kontak.html">Kontak</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+      <h2>Tentang</h2>
+      <p>
+        Kawasan Gunung Cupu berlokasi di Kampung Cigaruguy, Desa Sukajaya, Kecamatan Jonggol, Kabupaten Bogor,
+        adalah kawasan hasil konservasi berbasis penanaman jangka panjang yang membentuk ekosistem hutan rakyat.
+        Vegetasi kawasan didominasi oleh jati, mahoni, bambu, gaharu, aren, kemiri, serta berbagai tanaman buah dan tanaman obat.
+        Proses rehabilitasi ini berkontribusi signifikan terhadap pemulihan fungsi hidrologi, perlindungan tanah dan lereng,
+        peningkatan keanekaragaman hayati, serta keberlanjutan sumber air di wilayah sekitarnya.
+      </p>
+      <p>
+        Untuk menjaga kesinambungan ekosistem tersebut, Gunung Cupu dikembangkan sebagai kawasan agrowisata, konservasi,
+        dan edukasi terpadu berbasis masyarakat yang mengintegrasikan perlindungan lingkungan hidup, pertanian berkelanjutan,
+        serta pemberdayaan ekonomi masyarakat lokal. Pengembangan kawasan ini berlandaskan pada proses rehabilitasi dan restorasi
+        lahan jangka panjang yang dimulai sejak awal tahun 2000-an melalui inisiatif masyarakat, dipelopori oleh seorang anak petani perantauan,
+        Nurdin, yang secara konsisten melakukan penanaman dan perawatan lahan secara bertahap.
+      </p>
+
+      <hr class="sep" />
+
+      <h2>Latar awal & transformasi</h2>
+      <p>
+        Pada awal pengembangannya, kawasan Gunung Cupu berada dalam kondisi lahan terdegradasi akibat aktivitas penambangan batu,
+        dengan tutupan vegetasi rendah dan fungsi hidrologi yang terganggu. Melalui proses penanaman berkelanjutan, kawasan ini
+        bertransformasi menjadi lanskap hijau dengan sistem agroforestri yang berfungsi ekologis, sekaligus memberikan manfaat sosial dan ekonomi
+        bagi masyarakat sekitar.
+      </p>
+
+      <hr class="sep" />
+
+      <h2>Arah pengembangan</h2>
+      <p>
+        Dalam kerangka pengembangan kawasan, Gunung Cupu diarahkan sebagai <b>Conservation Farm and Natural Adventure</b>,
+        yaitu kawasan yang memadukan konservasi hutan dan air, agroforestri herbal, eduwisata lingkungan,
+        serta wisata petualangan alam berskala kecil dan terkendali. Seluruh aktivitas wisata dirancang untuk mendukung fungsi konservasi,
+        dengan penerapan prinsip daya dukung kawasan, zonasi yang jelas, serta pengelolaan berbasis etika lingkungan.
+      </p>
+
+      <hr class="sep" />
+
+      <h2>Program utama (Agro–Eco–Edu Tourism)</h2>
+      <p>
+        Pengembangan kawasan dilaksanakan melalui pendekatan Agro–Eco–Edu Tourism, dengan program unggulan meliputi konservasi hutan dan air,
+        kebun herbal, edukasi pertanian dan lingkungan, wisata edukatif dan petualangan alam, serta penguatan UMKM desa.
+        Masyarakat Desa Sukajaya berperan sebagai subjek utama pengelolaan kawasan, baik sebagai petani konservasi, pemandu wisata,
+        pengelola produk lokal, maupun mitra edukasi, sehingga manfaat ekonomi berjalan seiring dengan pelestarian alam dan nilai sosial budaya.
+      </p>
+
+      <hr class="sep" />
+
+      <h2>Tahapan pengembangan</h2>
+      <p>
+        Tahapan pengembangan kawasan dilakukan secara bertahap dan berkelanjutan, dimulai dari penguatan legalitas dan zonasi kawasan,
+        konservasi awal dan pembangunan infrastruktur ringan ramah lingkungan, pengembangan program eduwisata dan produk unggulan,
+        hingga perluasan kemitraan dengan pemerintah daerah, institusi pendidikan, dan lembaga riset. Keberhasilan pengembangan kawasan diukur melalui
+        indikator lingkungan, sosial, ekonomi, wisata berkualitas, serta kepatuhan tata kelola, sebagaimana dirumuskan dalam dokumen perencanaan
+        dan sistem monitoring kawasan.
+      </p>
+    </div>
+
+    <div class="footer">
+      <div>© <span id="year"></span> Nafas Gunung Cupu</div>
+      <div><a href="galeri.html">Galeri</a> · <a href="index.html">Beranda</a></div>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+  <script src="script.js"></script>
+</body>
+</html>
 /Sekolah Alam.html
 /Menginap di Gunung Cupu.htn
 /Herbal Gunung Cupu.html
