--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 /Herbal Gunung Cupu.html
 /Kuliner Gunung Cupu.html
 /galeri.html
+<a href="galeri.html">Galeri</a>
 /kontak.html
 /style.css
 /script.js
