--- a/index.html
+++ b/index.html
@@ -112,6 +112,63 @@
 /galeri.html
 <a href="galeri.html">Galeri</a>
 /kontak.html
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kontak — Nafas Gunung Cupu</title>
+  <meta name="description" content="Kontak & kemitraan Nafas Gunung Cupu." />
+  <link rel="icon" href="assets/img/logo-icon.png" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="topbar">
+    <div class="container">
+      <div class="nav">
+        <a class="brand" href="index.html">
+          <img src="assets/img/logo-icon.png" alt="Logo" />
+          <div>
+            <div class="t1">Nafas Gunung Cupu</div>
+            <div class="t2">Conservation Farm & Natural Adventure</div>
+          </div>
+        </a>
+        <div class="menu">
+          <a href="index.html">Beranda</a>
+          <a href="tentang.html">Tentang</a>
+          <a href="galeri.html">Galeri</a>
+          <a href="kontak.html">Kontak</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+      <h2>Kontak</h2>
+      <p>Isi kontak bisa kamu ganti nanti. Contoh format:</p>
+      <p>
+        <b>Koordinator:</b> Nurdin<br/>
+        <b>Lokasi:</b> Kampung Cigaruguy, Desa Sukajaya, Jonggol, Bogor<br/>
+        <b>Email/WhatsApp:</b> (isi di sini)<br/>
+      </p>
+      <p class="lead">Kamu juga bisa tambah tombol “WhatsApp” kalau sudah ada nomornya.</p>
+    </div>
+
+    <div class="footer">
+      <div>© <span id="year"></span> Nafas Gunung Cupu</div>
+      <div><a href="index.html">Beranda</a> · <a href="galeri.html">Galeri</a></div>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+  <script src="script.js"></script>
+</body>
+</html>
+
+
 /style.css
 /script.js
 /assets/img/   (isi foto-foto)
